# haskell-first-principles

./: .gitignore  readme.adoc  shell.nix
.direnv/: nix-profile-pre402916.4821bf3be25  nix-profile-pre402916.4821bf3be25.rc
haskell-first-principles/chapter-10/: StopsAndVowels.hs  fibScan.adoc  fibScan.hs  minMax.adoc  rewriteFold.adoc  rewritefuncfolds.hs  simpleFold.hs  squishMap.adoc  theDatabase.hs  understanding_folds.adoc
haskell-first-principles/chapter-11/: Programmers.hs  SumProductType.hs  VigenereCipher.hs  accoundLs.adoc  asPatternBreakdown.adoc  asPatterns.hs  binaryTree.hs  farmer.hs  (+18 more)
haskell-first-principles/chapter-13/cipher/: cipher.cabal
haskell-first-principles/chapter-13/cipher/.stack-work/: stack.sqlite3
haskell-first-principles/chapter-13/cipher/.stack-work/ghci/6c61a541/: cabal_macros.h
haskell-first-principles/chapter-13/cipher/.stack-work/ghci/c01dbac8/: cabal_macros.h
haskell-first-principles/chapter-13/cipher/.stack-work/install/4316e623/pkgdb/: cipher-0.1.0.0-9fSvtlpdWvFFpAMUIFtDoV.conf  package.cache
haskell-first-principles/chapter-13/cipher/exe/: Main.hs
haskell-first-principles/chapter-13/cipher/src/: Cipher.hs
haskell-first-principles/chapter-13/hangman/: hangman.cabal
haskell-first-principles/chapter-13/hangman/data/: dict.txt
haskell-first-principles/chapter-13/hangman/docs/: fillInCharacter.md  quickCheckMonadic.md
haskell-first-principles/chapter-13/hangman/src/: Hangman.hs  Main.hs
haskell-first-principles/chapter-13/hangman/test/: tests.hs
haskell-first-principles/chapter-14/Cipher/: CHANGELOG.md  vinCipher.cabal
haskell-first-principles/chapter-14/Cipher/src/: CCipher.hs  VinCipher.hs
haskell-first-principles/chapter-14/Cipher/test/: CipherTests.hs
haskell-first-principles/chapter-14/CoArbitrary/: CoArbitrary.cabal  CoArbitrary.hs  README.md
haskell-first-principles/chapter-14/CoArbitrary/.stack-work/: stack.sqlite3
haskell-first-principles/chapter-14/CoArbitrary/.stack-work/ghci/78963e9b/: cabal_macros.h
haskell-first-principles/chapter-14/CoArbitrary/.stack-work/ghci/ddd23f5e/: cabal_macros.h
haskell-first-principles/chapter-14/CoArbitrary/.stack-work/install/15430940/lib/x86_64-windows-ghc-8.10.7/CoArbitrary-0.1.0.0-IePVxXFkJBE84YB8rgn4Gr/: CoArbitrary.hi
haskell-first-principles/chapter-14/CoArbitrary/.stack-work/install/15430940/lib/x86_64-windows-ghc-8.10.7/CoArbitrary-0.1.0.0-JLOwXPr8wDQ6Ks1nBuSDal/: CoArbitrary.hi
haskell-first-principles/chapter-14/addition/: Addition.hs  addition.cabal
haskell-first-principles/chapter-14/addition/.stack-work/: stack.sqlite3
haskell-first-principles/chapter-14/addition/.stack-work/ghci/57842997/: cabal_macros.h
haskell-first-principles/chapter-14/addition/.stack-work/ghci/eaa2e02f/: cabal_macros.h
haskell-first-principles/chapter-14/addition/.stack-work/install/4316e623/lib/x86_64-windows-ghc-8.10.7/addition-0.1.0.0-4I9K6lkP2caBgmO4FRfH9N/: Addition.hi
haskell-first-principles/chapter-14/addition/.stack-work/install/4316e623/lib/x86_64-windows-ghc-8.10.7/addition-0.1.0.0-BETay8o7bKIBXZQf1dbBAm/: Addition.hi
haskell-first-principles/chapter-14/addition/.stack-work/install/4316e623/pkgdb/: addition-0.1.0.0-4I9K6lkP2caBgmO4FRfH9N.conf  package.cache
haskell-first-principles/chapter-14/trivial/: trivial.cabal
haskell-first-principles/chapter-14/trivial/.stack-work/: stack.sqlite3
haskell-first-principles/chapter-14/trivial/.stack-work/ghci/43a26c85/: cabal_macros.h
haskell-first-principles/chapter-14/trivial/.stack-work/install/4316e623/lib/x86_64-windows-ghc-8.10.7/trivial-0.1.0.0-812L8a62trvKSgkkYJrYt5/: Main.hi
haskell-first-principles/chapter-14/trivial/.stack-work/install/4316e623/pkgdb/: package.cache  trivial-0.1.0.0-812L8a62trvKSgkkYJrYt5.conf
haskell-first-principles/chapter-14/trivial/src/: Main.hs
haskell-first-principles/chapter-14/wordnumber/: CHANGELOG.md  wordnumber.cabal
haskell-first-principles/chapter-14/wordnumber/docs/: listOrdered.md
haskell-first-principles/chapter-14/wordnumber/src/: WordNumber.hs
haskell-first-principles/chapter-14/wordnumber/test/: Indopendance.hs  RandomGen.hs  tests.hs  tests2.hs
haskell-first-principles/chapter-15/monoidTest/: CHANGELOG.md  monoidTest.cabal
haskell-first-principles/chapter-15/monoidTest/src/: MaybeAnotherMonoid.hs  MonoidExercises.hs  SemigroupInst.hs  Testy.hs
haskell-first-principles/chapter-15/monoidTest/test/: tests.hs
haskell-first-principles/chapter-16/exercises/: exercises.cabal
haskell-first-principles/chapter-16/exercises/notebooks/: Question3.dyn_hi  Question3.dyn_o  Question3.hi  Question3.hs
haskell-first-principles/chapter-16/exercises/notebooks/.ipynb_checkpoints/: Exr1-checkpoint.ipynb
haskell-first-principles/chapter-16/funcyChk/: funcyChk.cabal
haskell-first-principles/chapter-16/funcyChk/src/: FunctorInst.hs
haskell-first-principles/chapter-16/funcyChk/test/: tests.hs
haskell-first-principles/chapter-17/applicprops/: CHANGELOG.md  applicprops.cabal
haskell-first-principles/chapter-17/applicprops/src/: Apl1.hs  BadMonoid.hs  Exrcises.hs  FinalExr.hs
haskell-first-principles/chapter-17/applicprops/test/: spec.hs
haskell-first-principles/chapter-21/qualityControl/: qualityControl.cabal
haskell-first-principles/chapter-21/qualityControl/src/: Lib.hs
haskell-first-principles/chapter-21/qualityControl/test/: Spec.hs
haskell-first-principles/chapter-22/shawty/: shawty.cabal
haskell-first-principles/chapter-22/shawty/src/: Main.hs
haskell-first-principles/misc/bip39/: CHANGELOG.md  bip39.cabal
haskell-first-principles/misc/bip39/src/: Bip39.hs  Main.hs
haskell-first-principles/misc/bip39/test/: tests.hs
haskell-first-principles/misc/recap/: CHANGELOG.md  recap.cabal
haskell-first-principles/misc/recap/src/: Hello.hs  Main.hs
haskell-first-principles/misc/recap/test/: tests.hs
misc/: Parser.md  WildCard.hs  mukluk.hs
misc/HaskeyDhall/: CHANGELOG.md  HaskellDhall.cabal
misc/HaskeyDhall/data/: config.dhall  getFoo.dhall  identity.dhall  makeBools.dhall  nested.dhall  person.dhall
misc/HaskeyDhall/src/: Main.hs
(+238 files in other folders)
