cabal-version:      2.4
name:               HaskellDhall
version:            0.1.0.0
author:             parduseidolon
maintainer:         38515818+PardusEidolon@users.noreply.github.com

extra-source-files: CHANGELOG.md
                  , data/*

library
    exposed-modules:  Main
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , dhall
    hs-source-dirs:   src
    default-language: Haskell2010
