name:                cipher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cipher#readme
license:             BSD3
license-file:        LICENSE
author:              jack Obrien
maintainer:          jack@yumi.ai
copyright:           2022 Jack Obrien
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cipher
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cipher

library
  hs-source-dirs:      src
  exposed-modules:     Cipher
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010