name:                CoArbitrary
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/CoArbitrary#readme
-- license:             BSD3
license-file:        LICENSE
-- author:              Author name here
-- maintainer:          example@example.com
-- copyright:           2022 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

Library
  hs-source-dirs:      .
  exposed-modules:     CoArbitrary
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck