name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Big Smoke
maintainer:          TheBigDoubleChesse@number9.com
copyright:           2022 Big Smoke
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  exposed-modules:     Addition
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck