name:                trivial
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/trivial#readme
license:             BSD3
license-file:        LICENSE
-- author:              Author name here
-- maintainer:          example@example.com
-- copyright:           2022 Author name here
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  exposed-modules:     Main
  hs-source-dirs:      src
  main-is:             Main.hs
  -- ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck