cabal-version:      2.4
name:               wordnumber
version:            0.1.0.0
author:             parduseidolon
maintainer:         38515818+PardusEidolon@users.noreply.github.com
extra-source-files: CHANGELOG.md

-- executable wordnumber
--     main-is:          Main.hs

--     Modules included in this executable, other than Main.
--     other-modules:

--     LANGUAGE extensions used by modules in this package.
--     other-extensions:
--     build-depends:    base ^>=4.14.3.0
--     hs-source-dirs:   app
--     default-language: Haskell2010

library
  exposed-modules:    WordNumber
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite tests
  ghc-options: -Wall -fno-warn-orpahns
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: test
  other-modules:        Tests2
                      , Indopendance
                      , RandomGen
  
  build-depends:        base
                      , wordnumber
                      , QuickCheck
                      , hspec
  default-language:   Haskell2010