cabal-version:      2.4
name:               monoidTest
version:            0.1.0.0
author:             parduseidolon
maintainer:         38515818+PardusEidolon@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:    MaybeAnotherMonoid
                    , Testy
                    , SemigroupInst
                    , MonoidExercises
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , QuickCheck
  hs-source-dirs:     src
  default-language:   Haskell2010


test-suite tests
  ghc-options:          -Wall -fno-warn-orpahns
  type:                 exitcode-stdio-1.0 
  main-is:              tests.hs
  hs-source-dirs:       test
  build-depends:        base
                      , QuickCheck
                      , hspec
                      , monoidTest
  default-language:   Haskell2010