name:                shawty
version:             0.1.0.0
author:              Jack
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
